dfir_rs/tests/compile-fail/surface_dest_sink_badsink.windows.stderr
error[E0277]: the trait bound `&str: dfir_rs::futures::Sink<_>` is not satisfied
 --> tests/compile-fail/surface_dest_sink_badsink.rs:6:41
  |
6 |         source_iter(0..10) -> dest_sink(sink);
  |                               ----------^^^^-
  |                               |         |
  |                               |         the trait `dfir_rs::futures::Sink<_>` is not implemented for `&str`
  |                               required by a bound introduced by this call
  |
  = help: the following other types implement trait `dfir_rs::futures::Sink<Item>`:
            `&dfir_rs::futures::futures_channel::mpsc::UnboundedSender<T>` implements `dfir_rs::futures::Sink<T>`
            `&mut S` implements `dfir_rs::futures::Sink<Item>`
            `Box<S>` implements `dfir_rs::futures::Sink<Item>`
            `BufferUnordered<S>` implements `dfir_rs::futures::Sink<Item>`
            `Buffered<S>` implements `dfir_rs::futures::Sink<Item>`
            `Fanout<Si1, Si2>` implements `dfir_rs::futures::Sink<Item>`
            `FlatMapUnordered<St, U, F>` implements `dfir_rs::futures::Sink<_Item>`
            `FlattenSink<Fut, Si>` implements `dfir_rs::futures::Sink<_Item>`
          and $N others
note: required by a bound in `main::op_2v1__dest_sink__loc_dfir_rs_tests_compile_fail_surface_dest_sink_badsink_rs_6_31_6_46`
 --> tests/compile-fail/surface_dest_sink_badsink.rs:6:31
  |
6 |         source_iter(0..10) -> dest_sink(sink);
  |                               ^^^^^^^^^^^^^^^ required by this bound in `op_2v1__dest_sink__loc_dfir_rs_tests_compile_fail_surface_dest_sink_badsink_rs_6_31_6_46`

error[E0277]: the trait bound `&str: dfir_rs::futures::Sink<_>` is not satisfied
 --> tests/compile-fail/surface_dest_sink_badsink.rs:6:31
  |
6 |         source_iter(0..10) -> dest_sink(sink);
  |                               ^^^^^^^^^^^^^^^ the trait `dfir_rs::futures::Sink<_>` is not implemented for `&str`
  |
  = help: the following other types implement trait `dfir_rs::futures::Sink<Item>`:
            `&dfir_rs::futures::futures_channel::mpsc::UnboundedSender<T>` implements `dfir_rs::futures::Sink<T>`
            `&mut S` implements `dfir_rs::futures::Sink<Item>`
            `Box<S>` implements `dfir_rs::futures::Sink<Item>`
            `BufferUnordered<S>` implements `dfir_rs::futures::Sink<Item>`
            `Buffered<S>` implements `dfir_rs::futures::Sink<Item>`
            `Fanout<Si1, Si2>` implements `dfir_rs::futures::Sink<Item>`
            `FlatMapUnordered<St, U, F>` implements `dfir_rs::futures::Sink<_Item>`
            `FlattenSink<Fut, Si>` implements `dfir_rs::futures::Sink<_Item>`
          and $N others
note: required by a bound in `main::op_2v1__dest_sink__loc_dfir_rs_tests_compile_fail_surface_dest_sink_badsink_rs_6_31_6_46`
 --> tests/compile-fail/surface_dest_sink_badsink.rs:6:31
  |
6 |         source_iter(0..10) -> dest_sink(sink);
  |                               ^^^^^^^^^^^^^^^ required by this bound in `op_2v1__dest_sink__loc_dfir_rs_tests_compile_fail_surface_dest_sink_badsink_rs_6_31_6_46`

error[E0277]: the trait bound `&str: dfir_rs::futures::Sink<_>` is not satisfied
 --> tests/compile-fail/surface_dest_sink_badsink.rs:6:31
  |
6 |         source_iter(0..10) -> dest_sink(sink);
  |                               ^^^^^^^^^^^^^^^ the trait `dfir_rs::futures::Sink<_>` is not implemented for `&str`
  |
  = help: the following other types implement trait `dfir_rs::futures::Sink<Item>`:
            `&dfir_rs::futures::futures_channel::mpsc::UnboundedSender<T>` implements `dfir_rs::futures::Sink<T>`
            `&mut S` implements `dfir_rs::futures::Sink<Item>`
            `Box<S>` implements `dfir_rs::futures::Sink<Item>`
            `BufferUnordered<S>` implements `dfir_rs::futures::Sink<Item>`
            `Buffered<S>` implements `dfir_rs::futures::Sink<Item>`
            `Fanout<Si1, Si2>` implements `dfir_rs::futures::Sink<Item>`
            `FlatMapUnordered<St, U, F>` implements `dfir_rs::futures::Sink<_Item>`
            `FlattenSink<Fut, Si>` implements `dfir_rs::futures::Sink<_Item>`
          and $N others
note: required by a bound in `main::op_2v1__dest_sink__loc_dfir_rs_tests_compile_fail_surface_dest_sink_badsink_rs_6_31_6_46`
 --> tests/compile-fail/surface_dest_sink_badsink.rs:6:31
  |
6 |         source_iter(0..10) -> dest_sink(sink);
  |                               ^^^^^^^^^^^^^^^ required by this bound in `op_2v1__dest_sink__loc_dfir_rs_tests_compile_fail_surface_dest_sink_badsink_rs_6_31_6_46`
  = note: this error originates in the macro `dfir_syntax` (in Nightly builds, run with -Z macro-backtrace for more info)
